<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        android:background="@color/darkcyan"
        tools:context=".SignUpActivity">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:id="@+id/et_user_name"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/log_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:id="@+id/et_user_email"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_phon"
            android:textColorHint="@color/white"
            android:inputType="number"
            android:textSize="16sp"
            android:id="@+id/et_user_phon"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/log_pass"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:id="@+id/et_user_pass"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sign_Up_rpass"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:id="@+id/et_user_rpass"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:textColor="@color/white"
                android:checked="true"
                android:id="@+id/rb_male"
                />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                android:textColor="@color/white"
                android:id="@+id/rb_female"
                />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/movies"
                    android:textColor="@color/white"
                    android:id="@+id/cb_movies"
                    />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gym"
                    android:textColor="@color/white"
                    android:id="@+id/cb_gym"
                    />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/read"
                    android:textColor="@color/white"
                    android:id="@+id/cb_read"
                    />

                <CheckBox
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shopping"
                    android:textColor="@color/white"
                    android:id="@+id/cb_shopping"
                    />

            </TableRow>

        </TableLayout>


        <Button
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dateofbirth"
            android:id="@+id/bt_date_of_birth"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cities"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:entries="@array/city_list"
            android:id="@+id/sp_city"
            />

        <Button
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_gravity="center"
            android:id="@+id/bt_save"
            />


    </LinearLayout>


</ScrollView>